--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,6 @@
 RESIZE_DIR=/var/www/fastapi_resizer/resizes/ # absolute path, must be setted even in stream mode
 MAX_IMAGE_SIZE=31457280 # 30 mb
 QUALITY=80 # quality
+IMAGE_REQUEST_TIMEOUT = 5 # must be greater than 0
 ORIGIN_URL='https://example.com/' # origin url 
 MODE='stream' # can be 'stream' or 'cache'
